# TuneLab

./: .gitignore  README.md  appcast.xml  pyproject.toml  run_matrixcorrect.py  run_tunelab.py
docs/: ARCHITECTURE.md
docs/releases/: v1.2.0.md  v1.3.0.md
matrixcorrect/: __init__.py  app.py  branding.py  cli.py  diagnostics.py  engineering.py  gamma_app.py  gamma_history.py  gamma_models.py  gamma_optimizer.py  gamma_report.py  gamma_settings.py  golden.py  gray_imatest.py  history.py  imatest.py  models.py  optimizer.py  qualcomm_gamma_xml.py  qualcomm_xml.py  report.py  settings.py
scripts/: build.py  build_windows.py  prepare_macos_release.py
tests/: materials.py  test_app_ui.py  test_ccm_color.py  test_ccm_engineering.py  test_ccm_imatest.py  test_ccm_optimizer.py  test_ccm_optimizer_rules.py  test_ccm_persistence.py  test_ccm_qualcomm_xml.py  test_ccm_reporting.py  test_color.py  test_colorchecker_engine.py  test_colorchecker_ui.py  test_engineering.py  test_gamma.py  test_golden.py  test_image_inspector_browser.py  test_image_inspector_cache.py  test_image_inspector_color.py  test_image_inspector_export.py  test_image_inspector_matching.py  test_image_inspector_model.py  test_image_inspector_renaming.py  test_image_inspector_settings.py  test_image_inspector_ui.py  test_imatest.py  test_launcher.py  test_macos_release.py  test_macos_updater.py  test_optimizer.py  test_optimizer_rules.py  test_project_structure.py  test_qualcomm_xml.py  test_regression.py  test_reports.py  test_settings_history.py  test_tunelab_ui.py  test_updates.py
tunelab/: __init__.py  app.py  branding.py  macos_updater.py  regression.py  ui_foundation.py  update_config.py  updates.py
tunelab/ccm/: __init__.py  cli.py  color_science.py  engineering.py  history.py  imatest.py  models.py  optimizer.py  reporting.py  settings.py
tunelab/colorchecker/: __init__.py  engine.py  ui.py
tunelab/gamma/: __init__.py  history.py  imatest.py  models.py  optimizer.py  qualcomm_xml.py  reporting.py  settings.py  ui.py
tunelab/image_inspector/: __init__.py  browser.py  cache.py  color.py  constants.py  export.py  matching.py  model.py  renaming.py  settings.py  types.py  ui.py
