[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "matrixcorrect"
version = "0.2.0"
description = "Cross-platform Qualcomm CC13 color-correction matrix optimizer"
readme = "README.md"
requires-python = ">=3.9.6"
license = { text = "Proprietary" }
authors = [{ name = "MatrixCorrect" }]
dependencies = []

[project.optional-dependencies]
pdf = ["reportlab>=3.6"]

[project.scripts]
matrixcorrect = "matrixcorrect.app:main"
matrixcorrect-gamma = "matrixcorrect.gamma_app:main"
matrixcorrect-cli = "matrixcorrect.cli:main"
matrixcorrect-golden = "matrixcorrect.golden:main"

[tool.setuptools.packages.find]
include = ["matrixcorrect*"]
