[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tunelab"
version = "0.2.0"
description = "Cross-platform Qualcomm camera tuning workbench"
readme = "README.md"
requires-python = ">=3.9.6"
license = { text = "Proprietary" }
authors = [{ name = "TuneLab" }]
dependencies = []

[project.optional-dependencies]
pdf = ["reportlab>=3.6"]

[project.scripts]
tunelab = "tunelab.app:main"
tunelab-gamma = "tunelab.gamma.ui:main"
tunelab-ccm = "tunelab.ccm.cli:main"
tunelab-regression = "tunelab.regression:main"

[tool.setuptools.packages.find]
include = ["tunelab*"]

[tool.setuptools.package-data]
tunelab = ["assets/*.png"]
