[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tunelab"
version = "1.3.0"
description = "Cross-platform Qualcomm camera tuning workbench"
readme = "README.md"
requires-python = ">=3.9.6"
license = { text = "Proprietary" }
authors = [{ name = "TuneLab", email = "kaiyi.jiang@thundersoft.com" }]
dependencies = [
    "numpy>=1.23",
    "Pillow>=9.2",
    "pillow-heif>=0.18",
    "opencv-python>=4.7",
    "reportlab>=3.6",
]

[project.scripts]
tunelab = "tunelab.app:main"
tunelab-gamma = "tunelab.gamma.ui:main"
tunelab-ccm = "tunelab.ccm.cli:main"
tunelab-regression = "tunelab.regression:main"

[tool.setuptools.packages.find]
include = ["tunelab*"]

[tool.setuptools.package-data]
tunelab = ["assets/*.png"]
